# ChangeLog for media-libs/sdl-mixer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-mixer/ChangeLog,v 1.113 2013/01/02 08:38:39 mr_bones_ Exp $

*sdl-mixer-1.2.12-r3 (02 Jan 2013)

  02 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/sdl-mixer-1.2.12-clang.patch, +sdl-mixer-1.2.12-r3.ebuild,
  files/sdl-mixer-1.2.12-mikmod-r587.patch,
  files/sdl-mixer-1.2.12-mikmod-r588.patch, files/sdl-mixer-1.2.12-wav.patch:
  build with clang (bug #448696)

*sdl-mixer-1.2.12-r2 (17 Dec 2012)

  17 Dec 2012; Mike Frysinger <vapier@gentoo.org>
  +files/sdl-mixer-1.2.12-mikmod-r587.patch,
  +files/sdl-mixer-1.2.12-mikmod-r588.patch, +sdl-mixer-1.2.12-r2.ebuild:
  Add fixes from upstream for working with newer mikmod versions #445980 by
  Benjamin Réveillé.

  17 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
  -files/sdl-mixer-1.2.11-midi.patch, -files/sdl-mixer-1.2.11-multilib.patch,
  -sdl-mixer-1.2.11-r1.ebuild:
  old

  20 Oct 2012; Raúl Porcel <armin76@gentoo.org> sdl-mixer-1.2.12-r1.ebuild:
  ia64 stable wrt #436124

  24 Aug 2012; Michael Sterrett <mr_bones_@gentoo.org>
  sdl-mixer-1.2.12-r1.ebuild:
  re-add dropped ia64 keyword

  23 Aug 2012; Michael Sterrett <mr_bones_@gentoo.org> -sdl-mixer-1.2.12.ebuild:
  old

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> sdl-mixer-1.2.12-r1.ebuild:
  alpha/sh/sparc stable wrt #422125

  03 Jul 2012; Jeroen Roovers <jer@gentoo.org> sdl-mixer-1.2.12-r1.ebuild:
  Stable for HPPA (bug #422125).

  29 Jun 2012; Brent Baude <ranger@gentoo.org> sdl-mixer-1.2.12-r1.ebuild:
  Marking sdl-mixer-1.2.12-r1 ppc for bug 422125

  27 Jun 2012; Markus Meier <maekke@gentoo.org> sdl-mixer-1.2.12-r1.ebuild:
  arm stable, bug #422125

  22 Jun 2012; Brent Baude <ranger@gentoo.org> sdl-mixer-1.2.12-r1.ebuild:
  Marking sdl-mixer-1.2.12-r1 ppc64 for bug 422125

  20 Jun 2012; Agostino Sarubbo <ago@gentoo.org> sdl-mixer-1.2.12-r1.ebuild: