@@ -4,7 +4,6 @@ AUX sdl-mixer-1.2.12-mikmod-r588.patch 1128 SHA256 3b9d959dc6660b3b765d8b4a53bc1
 AUX sdl-mixer-1.2.12-wav.patch 796 SHA256 7d455c08d79c4a957a8ae25e83f7253c5ff307a7fdc2c4d433b482dc3b7d70b9 SHA512 9fed330d6bcae546752434a0ea29168e2a8fa432c8670d7290e70905f3431746b15126e5ce05820e4dd4dd09c982c880a6ce901ab9b3cff298e7f2c8d6a8b491 WHIRLPOOL 8b26551b494cdb6658538a4220c01d48f3996c2eb74f4a4e97b7b4f1aa4945d951e26d885911ef0cd2d7183befd5cace209e3f88469ab21d4981864c6ee2063c
 DIST SDL_mixer-1.2.12.tar.gz 3707781 SHA256 1644308279a975799049e4826af2cfc787cad2abb11aa14562e402521f86992a SHA512 230f6c5a73f4bea364f8aa3d75f76694305571dea45f357def742b2b50849b2d896af71e08689981207edc99a9836088bee2d0bd98d92c7f4ca52b12b3d8cf96 WHIRLPOOL 046b7a160cfe214cdac8c1a5ea424024a8850d3737908e5630b504f1f12817bfd2f391909f37be3d6994cab7f71ab24ecab92e99f5429dd8405f0e4046bc00a7
 EBUILD sdl-mixer-1.2.12-r1.ebuild 2878 SHA256 7bc2f9790155808aec3623e10e697234ba9bb4346458334b018a6e10909f314b SHA512 1b4feef7c11c74af8ceca50914be97b386d40936baa2913e851507fd8d71c5efebc84bd439709af8715afdc4b998714ebfcd55f8fab8427656b8bd8a8bb2b32c WHIRLPOOL 9de71f8ac0e54aa1f290cab52e741bf09ad8f9f021c74e67e6d9b456603b1daf74a1aa580b0176bac18682858b98fba3e86e44961053bc20eaa75de8f20e8ac8
-EBUILD sdl-mixer-1.2.12-r2.ebuild 2943 SHA256 e682e83be0cc9cfd4a22d9084a63cbfda72519105cf0ae9dd1c1f682630fc5d8 SHA512 b5b0a20eaefb7157edfc0b10ceb7c371f3c4fd5c71b51ff644761a825cc1f033737dbf05c3f9e7b3fa0a2e5b3ba3a4c047993f8db31d755ee79b60d2b0b8862e WHIRLPOOL ed41958d8cf2b2810cba99f4a21ff5e89c5f3f4e77b6852f1623b9c29168a230d0d99e89d6b47ddbb5b9f7b030b7c8dfa4eff0f40295ec1137d69f122237123a
 EBUILD sdl-mixer-1.2.12-r3.ebuild 2981 SHA256 0302a748314b9c158737fd5226f0624ba997f77e8ec8898b5b38a04622492c3f SHA512 d2dfcdbce99e2bf55b4ad43b20cf14f388a5f133175e082a2963babac93663c37da5341f77556ba2e5ac251c622228d985cf36394c03ded756bd49c0210054d7 WHIRLPOOL ddac77e91ffb0f023d5b9858b91bd19049d63b521e3793ca32a5e52b65d43e271d5b8f76af200e1a31d9ffd65e87f9aea3e06a7d169a3af940e6f92a6fe46fec
-MISC ChangeLog 15305 SHA256 4c675eb1a1da45602e1807b5ff082436496b4794da9217ca14372160555a9680 SHA512 fcb49de4df1c950d0ad2f2b0df3e69ddf688979bfc856f7948874c1a8fefb95b2587d001c1bd32ed8e272b502fcc25d0feb57d93d86dcce45eeb72896d1e6002 WHIRLPOOL c7484d2e2c096717e973fdcc4680a293e79d7405e2bac3dce747ebda039fbbbe0654995d0a5ebc030a40dc333939ac892125f607d3ce72d0e059bdeac6457d83
+MISC ChangeLog 15398 SHA256 f014bd3f99d3a82038e68fd71b222dbe7e890d6a1d4ce24693512d5d3d25f34b SHA512 e720f9f4c703d2dbf9ee62cba33796df59cffa71582972e333866faaf195141b1388b42ba29d989001e912b7c8606a3297bd98a94ac048fc60aec9684a4d60a2 WHIRLPOOL 72825b69c3b3f1fd8a45ad140a2d0a7b7217aa005e0cfce04b9b53c54b04c5ff7215554398e447399ab25a1053a3487a436323f438f44b4903095084fe59b969
 MISC metadata.xml 572 SHA256 d4c6ae5e121255b47dd978176db7002fd8db1753cbfdf58792e9b4fa7565de35 SHA512 2b0cd28223fffbda314ad0f08415ca39b47b5734e105aea2f802b7ad22bee5aaa1c29c5583848de0605cbfde133901ac7bb1f61dd06c195ed731fc3a1847c656 WHIRLPOOL 50908664fc647d1c2d7c9d83cdb3bb4cb350ae38222dd15ad415bee3e5a85a7caa95ee65f79db44242bf7d94ff48ebe2354d21b1738cfc7a116eedaf4e32dc29
